adjust some styling on pages to correct spacing and change components on availability page to maintain colour theme.

--- a/src/components/AvailabilityPage/ChooseCal/ChooseCal.scss
+++ b/src/components/AvailabilityPage/ChooseCal/ChooseCal.scss
@@ -1,5 +1,10 @@
+@use "../../../styles/partials/mixins" as *;
+
 .choose {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 1rem;
+  &__button {
+    @include button;
+  }
 }
