--- a/src/components/AvailabilityPage/MyCal/MyCal.scss
+++ b/src/components/AvailabilityPage/MyCal/MyCal.scss
@@ -1,17 +1,22 @@
+@use "../../../styles/partials/variables" as *;
+
 .my-calendar {
   display: flex;
   flex-direction: column;
   align-items: center;
   &__title {
-    padding-bottom: 1rem;
+    padding: 1rem;
+    color: $pc;
   }
   &__sub-title {
-    padding: 1rem;
+    padding: 1rem 0 1.5rem;
+    color: $pc;
   }
   &__dates {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+    color: $pc;
   }
 }
 .react-calendar {
