--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,10 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/breakpoints" as *;
 
+.header {
+  padding-top: 1rem;
+  background-color: $bg;
+}
 .logo {
   background-color: $bg;
   display: flex;
