--- a/src/pages/Availability/Availability.scss
+++ b/src/pages/Availability/Availability.scss
@@ -5,7 +5,7 @@
   background-color: $bg;
   display: flex;
   flex-direction: column;
-  height: 84.75%;
+  height: 100%;
   &__title {
     text-align: center;
     margin-bottom: 2rem;
