--- a/src/pages/Event/Event.scss
+++ b/src/pages/Event/Event.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   background-color: $bg;
-  height: 85%;
+  height: 100%;
   &__title {
     margin: 1rem 0 1.5rem;
     color: $pc;
