--- a/src/pages/Friends/Friends.scss
+++ b/src/pages/Friends/Friends.scss
@@ -10,5 +10,6 @@
   color: $pc;
   &__title {
     border-bottom: 3px solid $link;
+    margin-top: -1rem;
   }
 }
