--- a/src/pages/Group/Group.scss
+++ b/src/pages/Group/Group.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   background-color: $bg;
-  height: 84.75%;
+  height: 100%;
   &__title {
     margin: 1rem;
     color: $pc;
